[REF] - Cleaned up project directory
